plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

group = 'com.calendarapp'
version = '1.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'org.mindrot:jbcrypt:0.4'
}

application {
    mainClass = 'com.calendarapp.Main'
}

compileJava.options.encoding = 'UTF-8'
